# key-Intialization

./: hardhat.config.js  package-lock.json  package.json
components/: KeyGen.tsx
contracts/: DataToken.sol
keygen_server/: .env  Cargo.toml
keygen_server/src/: lib.rs  main.rs
pages/: CreateToken.tsx  DataEncryption.tsx  PublicKeyRequest.tsx  index.tsx
scripts/: deploy.js
types/: keygen_server.d.ts
