[package]
name = "keygen_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rabe = "0.4.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11", features = ["json", "wasm-client"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "time", "macros"] }
dotenv = "0.15"
warp = "0.3"
serde_json = "1.0"
base64 = "0.13"

[lib]
crate-type = ["cdylib", "rlib"]
