[package]
name = "keygen_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rabe = "0.4.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
dotenv = "0.15"
